# ctg

./: CTG.xls  ETL-EDA.ipynb  ETL.ipynb  Modeling.ipynb  README.md  kappa_loss.ipynb  kappa_loss.py  kappa_loss_nn.py  kappa_loss_perceptron.py  pyproject.toml  test_jax.ipynb  test_kappa_loss.py  test_kappa_loss_nn.py  test_kappa_loss_perceptron.py
data/: preprocessed_data.csv
