[tool.poetry]
name = "ctg"
version = "0.1.0"
description = "Diagnos fetal distress from CTG data."
authors = ["Luke Schiefelbein <luke.schiefelbein@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.26.0"
pandas = "^1.3.4"
numpy = "^1.21.3"
xlrd = "^2.0.1"
ipykernel = "^6.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
