[tool.poetry]
name = "ctg"
version = "0.1.0"
description = "Diagnose fetal distress from CTG data."
authors = ["Luke Schiefelbein <luke.schiefelbein@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
requests = "^2.26.0"
xlrd = "^2.0.1"
ipykernel = "^6.5.1"
seaborn = "^0.11.2"
statsmodels = "^0.13.1"
plotly = "^5.4.0"
nbformat = "^5.1.3"
sklearn = "^0.0"
imbalanced-learn = "^0.8.1"
xgboost = "^1.5.1"
skll = "^2.5.0"
jax = "^0.2.25"
optax = "^0.1.0"
mord = "^0.6"
yellowbrick = "^1.3.post1"
lightgbm = "^3.3.1"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
